--- a/part7/blog-list-redux/bloglist-frontend/package.json
+++ b/part7/blog-list-redux/bloglist-frontend/package.json
@@ -16,7 +16,8 @@
     "prop-types": "^15.8.1",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.9.1",
