--- a/part7/blog-list-query/bloglist-frontend/package.json
+++ b/part7/blog-list-query/bloglist-frontend/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.13.4",
     "prop-types": "^15.8.1",
     "react": "^19.2.4",
-    "react-dom": "^19.2.4"
+    "react-dom": "^19.2.4",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.9.1",
