--- a/part7/blog-list-query/bloglist-frontend/package.json
+++ b/part7/blog-list-query/bloglist-frontend/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.20",
     "axios": "^1.13.4",
+    "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
     "prop-types": "^15.8.1",
     "react": "^19.2.4",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.4",
     "react-router-dom": "^7.13.0"
   },
